<resources>
    <string name="app_name">Editoria</string>
    <string name="servicios"><u>Servicios</u></string>
    <string name="editores_Mej"><u>Mejores Editores</u></string>
    <string name="publicarProyecto"><u>Publicar Proyecto</u></string>
    <string name="titulo_proyecto"><u>Proyectos</u></string>
    <string name="mis_servicios"><u>Mis servicios</u></string>
    <string name="servicios_contratados"><u>Servicios Contratados</u></string>
    <string name="tituloEvento"><u>Evento de la primera beta de la Aplicación</u></string>
    <string name="rankingEditores"><u>Ranking</u></string>
    <string name="insertarImagen"><u>Participar en el evento</u></string>
    <string name="participantes"><u>Participantes</u></string>
    <string name="titulo_proyecto_info"><u>Titulo del proyecto</u></string>
    <string name="titlo_datos_pedido"><u>Datos del pedido</u></string>
    <string name="confirmar_y_pagar"><u>Confirmar y pagar</u></string>
    <string name="nombre_titular"><b>Nombre del titular</b></string>
    <string name="num_tarjeta"><b>Nº de la tarjeta</b></string>
    <string name="vencimiento">Vencimiento</string>
    <string name="vencimiento_hint"><b>MM/AA</b></string>
    <string name="cvv"><b>CVV</b></string>
    <string name="cvv_hint"><b>3 dígitos</b></string>
    <string name="solicitudes_de_oferta"><u>Solicitudes de oferta</u></string>
    <string name="descargar_recurso"><u>Descargar recurso</u></string>
    <string name="enviar_proyecto"><u>Enviar proyecto</u></string>
    <string name="servicios_pendientes"><u>Servicios pendientes</u></string>
    <string name="valoraciom_editor"><u>Valoración del editor</u></string>
    <string name="valoraciom_proyecto"><u>Valoración del proyecto</u></string>
    <string name="entregas"><u>Entregas pendientes</u></string>
    <string name="valoracion"><u>Valoración</u></string>
    <string name="mi_cartera"><u>Mi Cartera</u></string>
    <string name="anyadir_dinero"><u>Añadir dinero</u></string>
    <string name="ejemploMail"><b>NombreGmail@gmail.com</b></string>
    <string name="ejemploFaceook"><b>NombreFacebook</b></string>
    <string name="ejemploTwitter"><b>NombreTwitter</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
