<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".fragments.MenuProyectoFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:text="@string/titulo_proyecto"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="20dp"
        android:text="@string/mis_servicios"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaMisServicios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/botonCrearNuevoServicio"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="Crear nuevo servicio"
        android:textColor="@color/black"
        android:backgroundTint="#16D600">

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="20dp"
        android:text="@string/servicios_contratados"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaServiciosContratados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp" />

</LinearLayout>

</ScrollView>