<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".fragments.ValorarFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:text="@string/valoracion"
            android:textColor="#000000"
            android:textSize="35dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:text="@string/valoraciom_editor"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/blank_profile"
            app:civ_border_color="#FF000000"
            app:civ_border_width="1dp" />


        <TextView
            android:id="@+id/nombreEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:text="(Nombre Editor)"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBarEditor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:progressTint="#FFC107" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="20dp"
            android:text="@string/valoraciom_proyecto"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/descripcionP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/borde"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:hint="Escribe tu comentario..."
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:scrollHorizontally="false" />


        <RatingBar
            android:id="@+id/ratingBarProyecto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="#FFC107" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0037FF"
            android:layout_marginTop="10dp"
            android:text="Publicar"/>


    </LinearLayout>


</ScrollView>